--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "devDependencies": {
     "autoprefixer": "^9",
     "postcss": "^7",
+    "stylelint-config-rational-order": "^0.1.2",
     "stylelint-config-recommended": "^5.0.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat"
   }
