--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,10 +1,8 @@
 {
-  "extends": [
-    "stylelint-config-recommended",
-    "stylelint-config-rational-order",
-    "stylelint-config-prettier"
-  ],
+  "extends": ["stylelint-prettier/recommended"],
+  "plugins": ["stylelint-prettier"],
   "rules": {
+    "prettier/prettier": true,
     "at-rule-no-unknown": [ true, {
       "ignoreAtRules": [
         "tailwind",
