--- a/package.json
+++ b/package.json
@@ -46,8 +46,11 @@
   "devDependencies": {
     "autoprefixer": "^9",
     "postcss": "^7",
-    "stylelint-config-rational-order": "^0.1.2",
-    "stylelint-config-recommended": "^5.0.0",
+    "prettier": "^2.2.1",
+    "stylelint": "^13.11.0",
+    "stylelint-config-prettier": "^8.0.2",
+    "stylelint-config-standard": "^20.0.0",
+    "stylelint-prettier": "^1.2.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat"
   }
 }
